# operation-reassurance

./: .gitignore  .mcp.json  .reassure.toml.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cli.py  probe_parse.py  pyproject.toml  reassure-mcp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  index.css  main.tsx
gui/src/api/: client.ts
gui/src/components/: Layout.tsx  RepoSelector.tsx
gui/src/hooks/: useAnalysis.ts  (+1 more)
reassure/: __init__.py  plugin.py
reassure/analyzers/: async_linter.py  blast_radius.py  dead_code.py  duplication.py  folder_structure.py  metrics.py  observability.py  repo_rules.py  solid.py  taxonomy.py  test_coverage.py
reassure/api/: server.py
reassure/classifiers/: test_type.py
reassure/core/: parser.py  repo_walker.py  symbol_map.py
reassure/gui/: app.py
reassure/hooks/: pre_tool_use.py
reassure/init/: detector.py  scaffolder.py
reassure/mcp/: server.py
reassure/output/: json_export.py  terminal.py
templates/_partials/: .mcp.json.tmpl  .reassure.toml.tmpl  AGENTS.md.tmpl  CLAUDE.md.tmpl
templates/flutter-riverpod-pg/: .reassure.toml.tmpl  pubspec.yaml.tmpl
tests/unit/: test_async_linter.py  test_blast_radius.py  test_classifier.py  test_coverage.py  test_dead_code.py  test_duplication.py  test_folder_structure.py  test_observability.py  test_pre_tool_use_hook.py  test_repo_rules.py  test_solid.py  test_symbol_map.py  test_taxonomy.py
(+49 files in other folders)
