[tool.poetry]
name = "operation-reassurance"
version = "0.1.0"
description = "Repo health observatory. CST/AST-powered, no runtime required."
authors = ["Austin Varga <64624232+avarga1@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "reassure" }]

[tool.poetry.scripts]
reassure = "cli:main"

[tool.poetry.dependencies]
python = "^3.10"
tree-sitter = "^0.25.2"
tree-sitter-python = "^0.25.0"
tree-sitter-rust = "^0.24.0"
tree-sitter-typescript = "^0.23.2"
tree-sitter-javascript = "^0.25.0"
rich = "^13.0.0"
streamlit = "^1.32.0"
networkx = "^3.3"
gitpython = "^3.1.0"
toml = "^0.10.2"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
